EXCEL GOTO  DELETE BLOCK